# Phantom

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  PHANTOM_SCRIPT.md  Phantom.sln  Project1.sln  README.md
Phantom/: Engine.cpp  Engine.h  Game.cpp  Game.h  Phantom.vcxproj  Phantom.vcxproj.filters  Player.cpp  Player.h  Resources.cpp  Resources.h  Script.cpp  Script.h  main.cpp
Phantom/Engine/: Console.cpp  Console.h
Phantom/Game/Script/: main.phantom
Phantom/Libs/SFML/lib/: sfml-main-d.lib
Phantom/Media/Script/: main.phantom
Project1/: Game.cpp  Game.h  Project1.vcxproj  main.cpp
